--- a/latihan/latihan5/style.css
+++ b/latihan/latihan5/style.css
@@ -118,6 +118,36 @@ h1 {
   animation: Slidedownfade 0.5s 0.5s forwards;
 }
 
+.next {
+  width: 40px;
+  height: 40px;
+  background-image: url(ri.png);
+  position: absolute;
+  text-indent: -9999px;
+  top: 30%;
+  margin-left: 10px;
+  opacity: 0;
+}
+
+.previous {
+  width: 40px;
+  height: 40px;
+  background-image: url(le.png);
+  position: absolute;
+  text-indent: -9999px;
+  top: 30%;
+  margin-left: -60px;
+  opacity: 0;
+}
+
+.overlay:target .next {
+  animation: fade 0.5s 0.5s forwards;
+}
+
+.overlay:target .previous {
+  animation: fade 0.5s 0.5s forwards;
+}
+
 @keyframes ZoomdanFade {
   0% {
     transform: scale(0);
@@ -137,5 +167,14 @@ h1 {
   100% {
     opacity: 1;
     margin-top: 0;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
